--- a/ff/second.html
+++ b/ff/second.html
@@ -36,7 +36,7 @@ button.active {
 <body>
 	<div>
 		
-<a href="first.html"><button href="second.html">Main page</button></a>
+<a href="index.html"><button href="second.html">Main page</button></a>
 <a href="second.html"><button href="">Catalog</button></a>
 <a href="third.html"><button href="">About</button></a>
 </div>
